--- a/protected/config/user_params.ini
+++ b/protected/config/user_params.ini
@@ -4,18 +4,18 @@
 
 ; Database Address.
 ; For MySQL database, specify host name or IP address
-; of the database server, optionally appended 
+; of the database server, optionally appended
 ; with port number.
 ; For SQLite database, specify absolute path to
 ; database file. %DATA_DIR% placeholder will be
-; automatically replaced with correct path to 
+; automatically replaced with correct path to
 ; protected/data directory.
 ; Example: 'mysql:host=127.0.0.1;dbname=crashfix'
 db_connection_string='mysql:host=127.0.0.1;dbname=crashfix'
 ;db_connection_string='sqlite:%DATA_DIR%/crashfix.db'
 
 ; User Name.
-; For MySQL, this parameter defines username 
+; For MySQL, this parameter defines username
 ; (e.g., 'crashfix'.
 ; For SQLite, this is ignored.
 db_username=crashfix
@@ -29,9 +29,10 @@ db_password=crashfixpwd
 ; This parameter specifies the prefix to prepend
 ; to every table name when initializing database.
 ; For example, 'tbl_' prefix results in creation of
-; tables named like 'tbl_crashreport', 'tbl_bug' and 
+; tables named like 'tbl_crashreport', 'tbl_bug' and
 ; so on.
-db_table_prefix=tbl_ 
+db_table_prefix=tbl_
 
-
-
+; CrashFix Service port and host
+daemon_port=50
+daemon_host=127.0.0.1
